WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255304
[JSC] Fix Object.assign's temporary structure transition
https://bugs.webkit.org/show_bug.cgi?id=255304
Summary
[JSC] Fix Object.assign's temporary structure transition
Yusuke Suzuki
Reported
2023-04-11 14:33:08 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-11 14:34:23 PDT
<
rdar://problem/107903084
>
Yusuke Suzuki
Comment 2
2023-04-11 14:37:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12626
EWS
Comment 3
2023-04-11 15:26:42 PDT
Committed
262843@main
(b7ecdfa767a3): <
https://commits.webkit.org/262843@main
> Reviewed commits have been landed. Closing PR #12626 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug